fdo#78382 PDF Import: add opacity support for fill and stroke

Change-Id: I76375280ee4726c1d497858165f38f4e8b4224cb
Reviewed-on: https://gerrit.libreoffice.org/9268
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>